# EVEOFFLINE

./: .dockerignore  .gitignore  ASTROX_RESEARCH.md  ATLAS_INTEGRATION.md  CMakeLists.txt  CONTENT_GUIDE.md  Dockerfile  EXTENDED_CONTENT_SUMMARY.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LANGUAGE_AND_3D_OPTIONS.md  Makefile  QUICKSTART_VISUALS.md  QUICKSTART_VS2022.md  QUICK_REFERENCE.md  README.md  SESSION_COMPLETE.md  SESSION_COMPLETE_TECH2_CRUISERS.md  TROUBLESHOOTING_VS2022.md  VS2022_SETUP_GUIDE.md  assets  build.bat  build.sh  build_and_test.py  build_cpp_client.py  build_vs.bat  client_3d.py  demo_client_features.py  demo_features.py  demo_name_generator.py  demo_new_features.py  error_log.txt  error_log12.txt  errorlog.txt  errorlog1.txt  errorlog1234.txt  errorlog1235.txt  errorlog1236.txt  errorlog2.txt  (+21 more)
atlas_tests/: CMakeLists.txt  main.cpp  test_asset.cpp  test_compiler.cpp  test_ecs.cpp  test_engine.cpp  test_graphvm.cpp  test_hud_panels.cpp  test_net.cpp  test_world.cpp
cpp_client/: CMakeLists.txt  DEPENDENCIES.md  EVE_UI_ROADMAP.md  PHASE4.5_ENHANCED_UI.md  PHASE4.8_SERVER_RESPONSES.md  README.md  SESSION_COMPLETE_PHASE4.5_ENHANCED_UI.md  build_network_standalone.sh  build_starmap_demo.sh  build_test.sh  build_test_asteroid.sh  build_test_enhanced_ui.sh  build_test_entity_sync.sh  build_test_instanced.sh  build_test_lighting.sh  build_test_network.sh  build_test_phase46.sh  build_test_phase48.sh  build_test_post_processing.sh  build_test_responses.sh  build_test_shadow.sh  build_test_texture.sh  extract_reference_models.sh  test_asteroid_field.cpp  test_atlas_ui.cpp  test_audio_system.cpp  test_deferred_rendering.cpp  test_enhanced_ui.cpp  test_entity_sync.cpp  test_frustum_culling.cpp  test_instanced_rendering.cpp  test_layout_manager.cpp  test_lighting.cpp  test_model_analyzer.cpp  test_network.cpp  test_phase46_advanced.cpp  test_phase48_panels.cpp  test_photon_ui.cpp  test_post_processing.cpp  test_procedural_mesh.cpp  (+8 more)
cpp_client/build_test/: Makefile  test_frustum_culling
cpp_client/include/audio/: audio_generator.h  audio_manager.h
cpp_client/include/core/: application.h  embedded_server.h  entity.h  entity_manager.h  entity_message_parser.h  file_logger.h  game_client.h  session_manager.h  ship_physics.h  solar_system_scene.h
cpp_client/include/network/: network_manager.h  protocol_handler.h  tcp_client.h
cpp_client/include/rendering/: asteroid_field_renderer.h  camera.h  frustum_culler.h  gbuffer.h  healthbar_renderer.h  instanced_renderer.h  lighting.h  lod_manager.h  mesh.h  model.h  particle_system.h  pbr_materials.h  post_processing.h  procedural_mesh_ops.h  procedural_ship_generator.h  reference_model_analyzer.h  renderer.h  resolution_manager.h  shader.h  shadow_map.h  ship_generation_rules.h  ship_part_library.h  station_renderer.h  texture.h  visual_effects.h  warp_effect_renderer.h  window.h
cpp_client/include/ui/: chat_panel.h  context_menu.h  docking_manager.h  drone_control_panel.h  dscan_panel.h  entity_picker.h  eve_colors.h  eve_panels.h  eve_target_list.h  fitting_panel.h  hud.h  hud_panels.h  input_handler.h  inventory_panel.h  layout_manager.h  market_panel.h  mission_panel.h  module_browser_panel.h  neocom_panel.h  notification_manager.h  overview_panel.h  probe_scanner_panel.h  radial_menu.h  rml_ui_manager.h  sidebar_panel.h  space_colors.h  star_map.h  tactical_overlay.h  target_list.h  ui_manager.h
cpp_client/shaders/: beam.frag  beam.vert  nebula.frag  warp_tunnel.frag
cpp_client/src/: main.cpp
cpp_client/src/audio/: audio_generator.cpp
cpp_client/src/core/: application.cpp  embedded_server.cpp  entity.cpp  entity_manager.cpp  entity_message_parser.cpp  file_logger.cpp  game_client.cpp  session_manager.cpp  ship_physics.cpp  solar_system_scene.cpp
cpp_client/src/network/: network_manager.cpp  protocol_handler.cpp  tcp_client.cpp
cpp_client/src/rendering/: asteroid_field_renderer.cpp  camera.cpp  frustum_culler.cpp  gbuffer.cpp  healthbar_renderer.cpp  instanced_renderer.cpp  lighting.cpp  lod_manager.cpp  mesh.cpp  model.cpp  particle_system.cpp  pbr_materials.cpp  post_processing.cpp  procedural_mesh_ops.cpp  procedural_ship_generator.cpp  reference_model_analyzer.cpp  renderer.cpp  resolution_manager.cpp  shader.cpp  ship_generation_rules.cpp  ship_part_library.cpp  station_renderer.cpp  texture.cpp  visual_effects.cpp  warp_effect_renderer.cpp  window.cpp
cpp_client/src/ui/: chat_panel.cpp  context_menu.cpp  docking_manager.cpp  drone_control_panel.cpp  dscan_panel.cpp  entity_picker.cpp  eve_panels.cpp  eve_target_list.cpp  fitting_panel.cpp  hud.cpp  hud_panels.cpp  input_handler.cpp  inventory_panel.cpp  market_panel.cpp  mission_panel.cpp  module_browser_panel.cpp  neocom_panel.cpp  notification_manager.cpp  overview_panel.cpp  probe_scanner_panel.cpp  radial_menu.cpp  rml_ui_manager.cpp  sidebar_panel.cpp  star_map.cpp  tactical_overlay.cpp  target_list.cpp  ui_manager.cpp
cpp_client/ui_resources/rcss/: atlas_ui.rcss  photon_ui.rcss
cpp_client/ui_resources/rml/: chat.rml  context_menu.rml  drone_bay.rml  dscan.rml  fitting.rml  inventory.rml  market.rml  mission.rml  neocom.rml  overview.rml  radial_menu.rml  ship_hud.rml  sidebar.rml  target_list.rml
cpp_server/: CMakeLists.txt  README.md  build.bat  build.sh  run_tests.sh  test_systems.cpp
cpp_server/docs/: ECS_IMPLEMENTATION.md
cpp_server/include/: game_session.h  server.h
cpp_server/include/auth/: steam_auth.h  whitelist.h
cpp_server/include/components/: game_components.h
cpp_server/include/config/: server_config.h
cpp_server/include/data/: npc_database.h  ship_database.h  world_persistence.h  wormhole_database.h
cpp_server/include/ecs/: component.h  entity.h  system.h  world.h
cpp_server/include/network/: protocol_handler.h  tcp_server.h
cpp_server/include/systems/: ai_system.h  ambient_traffic_system.h  anomaly_spawner_system.h  anomaly_system.h  background_simulation_system.h  bounty_system.h  capacitor_system.h  (+53 more)
cpp_server/src/: game_session.cpp  main.cpp  server.cpp
(+354 files in other folders)
